--- a/src/styles.css
+++ b/src/styles.css
@@ -8,4 +8,74 @@ html {
   box-sizing: inherit;
 }
 
+body {
+  background-color: aliceblue;
+}
 
+.mainContainer {
+  padding: 20px;
+}
+.container-list {
+  text-align: center;
+}
+.container {
+}
+.description {
+  width: 40%;
+}
+.flag {
+  margin-left: 20px;
+}
+.countriesContainer {
+  width: 400px;
+}
+form {
+  text-align: center;
+}
+
+input {
+  width: 300px;
+  font-size: 100%;
+  height: 40px;
+  border: 2px solid tomato;
+  border-radius: 4px;
+  padding: 0 10px;
+  margin: 0;
+  outline: none;
+}
+
+.container {
+  display: flex;
+  margin: auto;
+  justify-content: center;
+  padding: 0 60px;
+}
+.markapSpan {
+  margin-left: 10px;
+  font-size: 25px;
+  font-weight: normal;
+}
+/* .is-hidden {
+        display: none;
+      } */
+
+h2 {
+  text-align: center;
+  font-size: 40px;
+}
+p {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+img {
+  /* width: 100%; */
+  height: auto;
+}
+ul {
+  list-style: square;
+}
+li {
+  font-size: 25px;
+  padding-left: 15px;
+}
