--- a/src/templates/list.hbs
+++ b/src/templates/list.hbs
@@ -1,4 +1,4 @@
 {{!-- <div class="container-list"></div> --}}
 {{#each this}}
- <li>{{this.name}}</li>
+ <li class="countriesList">{{this.name}}</li>
   {{/each}}
